--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           <a class="topmenu" href="#about-me">About Me</a>
           <a class="topmenu" href="#journey">My Journey</a>
           <a class="topmenu" href="#skills">Skills</a>
+          <a class="topmenu" href="#Experience">Experience</a>
           <a class="topmenu" href="#Projects">Projects</a>
+          <a class="topmenu" href="#certification">Certificates</a>
          
         </div>
       </div>    
@@ -143,7 +145,48 @@
           </div>
       </div>
     </section>
+       <!-- Experience -->
+    <section class="Experience" id="Experience">
+      <h2>
+        Experience
+      </h2>
+      <div style="clear:both;"></div>
+
+        <div id="projects-container" class="projects-container">
+          <div class="project-card">
+            <h3>Frontend Developer Internship at Unified Mentor<span style="color: #7600bc;"> (August 2024 - Present)</span></h3>
+            <h3>Project: Farmer Government Aided Scheme</h3>
+            <ul>
+              <li>Developing an e-services platform for agricultural and government schemes.</li>
+              <li>Providing farmers with comprehensive information on crops, pesticides, insecticides, and financial details.</li>
+              <li>Enabling application and progress tracking for various government programs.</li>
+              <li>Ensuring the platform is safe, testable, and includes thorough logging of all actions.</li>
+              <li>Focused on deploying the solution, optimizing system architecture, and maintaining a detailed project report on GitHub.</li>
+            </ul>
+            <h3>Project: Career Guidance</h3>
+            <ul>
+              <li>Developing a Career Guidance web application to assist students and parents in selecting the best institutions.</li>
+              <li>Provides detailed information on tuition, housing, eligibility, campus placements, scholarship schemes, and more.</li>
+              <li>Generates a tailored college list based on entrance exam results, eligibility criteria, and student preferences.</li>
+              <li>Implements modules for student and admin logins, college selection, aptitude tests, and detailed registration processes.</li>
+              <li>Focused on ensuring the application is safe, testable, and includes thorough logging of all actions.</li>
+            </ul>
+          </div>
+          <div class="project-card">
+            <h3>Frontend Developer Internship at Techplement <span style="color: #7600bc;"> (June 2024 - July 2024)</span></h3>
+            <ul>
+              <li>Full Stack Developer with experience in creating responsive web applications.</li>
+              <li> Developed an Online Resume Builder using React, Tailwind CSS, Node.js, and MongoDB.</li>
+              <li>Implemented a challenging feature that allows users to store and display resumes on a dashboard.</li>
+              <li>Included seamless download options for generated resumes.</li>
+              <li>Committed to leveraging modern technologies to enhance user experience and streamline the resume creation process.</li>
+                 <li><a href="https://github.com/Amitabadgal/resumecreator">Project Link</a></li>
+            </ul>
+          </div>
           
+    </div>
+    </section>
+
     <!-- Projects -->
     <section class="projects" id="projects">
       <h2>
@@ -183,6 +226,26 @@
           </div>
     </div>
     </section>
+
+ <!-- Certification -->
+ <section class="certification" id="certification">
+  <h2>
+    Certification
+  </h2>
+  <div style="clear:both;"></div>
+  <div id="projects-container" class="projects-container">
+    <div class="project-card">
+  <ul>
+  <li>Introduction to Web Development with HTML, CSS, JavaScript from IBM</li>
+  <li>Getting Started with Git and GitHub from IBM</li> 
+  <li>Problem Solving (Intermediate) from Hacker Rank</li>
+
+</ul>
+</div>
+</div>
+</div>
+</section>
+
     <div style="clear:both;"></div>
 
     <div class="iconbutton">
