--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <li>Implemented a challenging feature that allows users to store and display resumes on a dashboard.</li>
               <li>Included seamless download options for generated resumes.</li>
               <li>Committed to leveraging modern technologies to enhance user experience and streamline the resume creation process.</li>
-                 <li><a href="https://github.com/Amitabadgal/resumecreator">Project Link</a></li>
+                 <li><a href="https://resumecreator-frontend.onrender.com">Project Link</a></li>
             </ul>
           </div>
           
